--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID="takip-k0hdb"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="takip-k0hdb.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="1093335320755"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:1093335320755:web:b029a206cb0fe66f7408c6"
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyBXnUijO2aXdlNIhzz9BFYib0rZQqVwRs0
